# ripstop-codec

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  NOTICE  README.md
docs/: SPEC.md
include/ripstop/: Codec.h  Error.h  Format.h  MemStream.h  config_bridge.h
include/ripstop/detail/: constexpr_obfuscation.h  hostile_imports.h  memory_hygiene.h  polymorphic_error.h
src/: RipStop.cpp
src/detail/: hostile_imports.h  memory_hygiene.cpp
templates/: RipStop_Config.example.h
tests/: RipStop_TestConfig.h  test_ripstop.cpp
tools/: generate_config.py  generate_key.py
